hphp/test/zend/good/ext-standard-misc/time_nanosleep_error4.php
<?php

$nano = time_nanosleep(0, -10);

?>