hphp/test/zend/bad/ext/gd/tests/imagelayereffect_error3.php
<?php
$resource = tmpfile();
$layer = imagelayereffect($resource, IMG_EFFECT_REPLACE);
?>